--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,62 +1,52 @@
 services:
-  # PHP Service
+  # Servicio de la Aplicación PHP
   app:
     build:
       context: .
       dockerfile: Dockerfile
-      target: php
-    container_name: landingbot_app
+      target: production # Especifica que se debe construir la etapa final 'production'
+    container_name: laravel_app
     restart: unless-stopped
-    tty: true
-    environment:
-      SERVICE_NAME: app
-      SERVICE_TAGS: dev
-      # Laravel-specific environment variables
-      DB_CONNECTION: sqlite
-      DB_DATABASE: /var/www/database/database.sqlite
-      CACHE_DRIVER: redis # Using redis driver for Valkey
-      REDIS_HOST: cache
-      REDIS_PORT: 6379
-      SESSION_DRIVER: redis # Using redis driver for Valkey
     working_dir: /var/www
     volumes:
-      - ./:/var/www
-      - sqlite_data:/var/www/database
-      - ./docker/php/local.ini:/usr/local/etc/php/conf.d/local.ini
+      - .:/var/www
     networks:
-      - app-network
+      - laravel-network
 
-  # Nginx Service
-  webserver:
+  # Servidor Web Nginx
+  nginx:
     image: nginx:alpine
-    container_name: landingbot_webserver
+    container_name: laravel_nginx
     restart: unless-stopped
-    tty: true
     ports:
-      - "8069:8069"
-      - "5173:5173"
+      - "8070:8070"
     volumes:
-      - ./:/var/www
-      - ./docker/nginx/conf.d/:/etc/nginx/conf.d/
+      - .:/var/www
+      - ./docker/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     networks:
-      - app-network
+      - laravel-network
 
-  # Valkey Cache Service
-  cache:
-    image: valkey/valkey:7.2-alpine
-    container_name: landingbot_cache
+  # Servicio de Redis
+  redis:
+    image: redis:alpine
+    container_name: laravel_redis
     restart: unless-stopped
     ports:
       - "6379:6379"
+    volumes:
+      - redis-data:/data
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
     networks:
-      - app-network
+      - laravel-network
 
-# Docker Networks
 networks:
-  app-network:
+  laravel-network:
     driver: bridge
 
-# Volumes
 volumes:
-  sqlite_data:
+  redis-data:
     driver: local
