--- a/docker/php/local.ini
+++ b/docker/php/local.ini
@@ -1,3 +1,14 @@
 [PHP]
-post_max_size = 50M
-upload_max_filesize = 50M
+post_max_size = 100M
+upload_max_filesize = 100M
+
+[opcache]
+opcache.enable=1
+opcache.enable_cli=1
+opcache.memory_consumption=192
+opcache.interned_strings_buffer=16
+opcache.max_accelerated_files=10000
+opcache.revalidate_freq=0
+opcache.validate_timestamps=0
+opcache.jit_buffer_size=100M
+opcache.jit=1235
